# trab_rosStage_TSR

./: README.md  frames_2025-06-11_11.27.49.gv
install/: local_setup.sh  setup.sh
install/Stage/lib/: libstage.so.4.3.0
install/Stage/share/Stage/: package.sh
install/stage/lib/: libstage.so.4.3.0
install/stage/lib/cmake/Stage/: stage-config.cmake
install/stage/lib/pkgconfig/: stage.pc
install/stage/share/stage/: package.sh
install/stage_ros2/lib/stage_ros2/: stage_ros2
install/stage_ros2/share/ament_index/resource_index/parent_prefix_path/: stage_ros2
install/stage_ros2/share/stage_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/stage_ros2/share/stage_ros2/cmake/: stage_ros2Config-version.cmake  stage_ros2Config.cmake
install/stage_ros2/share/stage_ros2/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/stage_ros2/share/stage_ros2/launch/: demo.launch.py  f710.launch.py  rviz.launch.py  rviz_ns.launch.py  stage.launch.py
install/stage_ros2/share/stage_ros2/world/: cave.world  cave_multi.world  cave_seven_robots.world  cave_three_robots.world  hallway.world  lines.world  new_cave.world  straden.world  willow-four-erratics-multisensor.world
install/trab_stage_pkg/lib/trab_stage_pkg/: publisher  py_node  robot  subscriber
install/trab_stage_pkg/share/trab_stage_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/trab_stage_pkg/: package.xml  setup.cfg  setup.py
src/trab_stage_pkg/trab_stage_pkg/: publisher.py  robot.py
(+16 files in other folders)
